c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/compound_assignment_invalid_decl.c
int main(void) {
    for (int i += 1; i < 10; i += 1) {
        return 0;
    }
}